@@ -1,4 +1,4 @@
-"CODE";"EN";"DE";"IT"
+"CODE";"en";"de";"it"
 0;"English";"German";"Italian"
 1;"Heading";"Kurs";"Prua"
 2;"Bearing";"Peilung";"Rilevamento"
