@@ -1,4 +1,4 @@
-"CODE";"EN";"DE";"IT"
+"CODE";"en";"de";"it"
 0;"English";"Englisch";"inglese"
 1;"German";"Deutsch";"tedesco"
 2;"Italian";"Italienisch";"italiano"
